add instructions to page

--- a/index.html
+++ b/index.html
@@ -9,5 +9,10 @@
     </head>
     <body>
         <canvas id="board"></canvas>
+        <p>Hello!</p>
+        <h3>How To:</h2>
+        <p>1. Press Space or Up Arrow to make the bird jump</p>
+        <p>2. Pass through the pipes to get points</p>
+        <p>3. Enjoy!</p>
     </body>
 </html>
